# imdb-data-analytics-python

./: .gitignore  README.md  imdb-data-analytics.ipynb  pyproject.toml
