[tool.poetry]
name = "imdb-data-analytics-python"
version = "0.1.0"
description = "IMBD Data Analytics with Python"
authors = ["Felipe Toscano <felipe.toscano@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"
notebook = "^6.4.0"
matplotlib = "^3.4.2"
pycountry = "^20.7.3"
seaborn = "^0.11.1"
sklearn = "^0.0"
imdb-sqlite = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
